Lot's of changes that did not work and are somewhat taken out.  I tried to add canonical rails and friendly id gems, but could not get them to work.  Also continued trying to solve my memes flex box issue.  Added breaks to the blog home page for better spacing

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -3695,3 +3695,7 @@ iframe {
   margin: 1em 0 1em 0;
   padding: 0 0.75em 0.5em 0;
 }
+
+.grid-item {
+  height: 50px;
+}
